# MSA

./: .gitignore
MSA_Test/: MSA_Test.sln
MSA_Test/MSA/: Alignment.cpp  Alignment.h  CMakeLists.txt  ConsensusSequenceCreator.cpp  ConsensusSequenceCreator.h  DNADatabase.cpp  DNADatabase.h  MSA.cpp  MSA.vcxproj  MSA.vcxproj.filters  Matrix.cpp  Matrix.h  Outfile.txt  Outfile1.txt  Pam.cpp  Pam.h
MSA_Test/MSA/Alignmentsamplesequences/: LargetFile.txt  pairwise_nucleotide_3.fasta  pairwise_nucleotide_4.fasta
MSA_Test/MSA/src/: CMakeLists.txt  ConsensusSequenceCreator.h  DNADatabase.cpp  DNADatabase.h  IOSequenceController.cpp  IOSequenceController.h  MSA.cpp  Matrix.cpp  MatrixDup.h  MultipleSequenceAlignment.cpp  MultipleSequenceAlignment.h  Outfile.txt  Outfile1.txt
MSA_Test/MSA/test/: CMakeLists.txt  TestDNADataBase.cpp  gtest.cpp  test-test.cpp
MSA_Test/MSA/test/Alignmentsamplesequences/: MSA_sequences.txt  pairwise_nucleotide_1.fasta  pairwise_nucleotide_2.fasta  pairwise_protein_1.fasta
MSA_Test/MSA/x64/Debug/: MSA.exe.recipe  MSA.ilk  vc143.idb
MSA_Test/MSA/x64/Debug/MSA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MSA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MSA_Test/MSA_Test/: MSA_Test.vcxproj
MSA_Test/MSA_Test/x64/Debug/: MSA_Test.exe.recipe  MSA_Test.vcxproj.FileListAbsolute.txt
MSA_Test/MSA_Test/x64/Debug/MSA_Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  MSA_Test.lastbuildstate  link.command.1.tlog  (+2 more)
MSA_Test/x64/Debug/: MSA_Test.ilk
